Updated building process for windows/linux