@@ -16,7 +16,7 @@
 
 	<properties>
 		<app.mainClass>lu.kbra.modelizer_next.MNMain</app.mainClass>
-		<jpackage.name>Modelizer Next Standalone</jpackage.name>
+		<jpackage.name>Modelizer Next App</jpackage.name>
 		<common.scope>provided</common.scope>
 	</properties>
 
@@ -58,126 +58,6 @@
 				<common.scope>compile</common.scope>
 			</properties>
 		</profile>
-		<profile>
-			<id>native</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>native-windows</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>package-app-standalone-windows</id>
-								<phase>package</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>jpackage</executable>
-									<arguments>
-										<argument>--type</argument>
-										<argument>${jpackage.type.windows}</argument>
-										<argument>--name</argument>
-										<argument>${jpackage.name}</argument>
-										<argument>--app-version</argument>
-										<argument>${appVersion}</argument>
-										<argument>--input</argument>
-										<argument>
-											${project.build.directory}/jpackage-input/</argument>
-										<argument>--main-jar</argument>
-										<argument>${project.build.finalName}.jar</argument>
-										<argument>--dest</argument>
-										<argument>
-											${project.build.directory}/dist/windows</argument>
-										<argument>--add-modules</argument>
-										<argument>${jpackage.addModules}</argument>
-										<argument>--win-menu-group</argument>
-										<argument>${jpackage.category}</argument>
-										<argument>--win-menu</argument>
-										<argument>--icon</argument>
-										<argument>${jpackage.icon}</argument>
-										<argument>--file-associations</argument>
-										<argument>${jpackage.fa1}</argument>
-										<argument>--file-associations</argument>
-										<argument>${jpackage.fa2}</argument>
-										<argument>--file-associations</argument>
-										<argument>${jpackage.fa3}</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>native-linux</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>package-app-standalone-linux</id>
-								<phase>package</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>jpackage</executable>
-									<arguments>
-										<argument>--type</argument>
-										<argument>${jpackage.type.linux}</argument>
-										<argument>--name</argument>
-										<argument>${jpackage.name}</argument>
-										<argument>--app-version</argument>
-										<argument>${appVersion}</argument>
-										<argument>--input</argument>
-										<argument>
-											${project.build.directory}/jpackage-input/</argument>
-										<argument>--main-jar</argument>
-										<argument>${project.build.finalName}.jar</argument>
-										<argument>--dest</argument>
-										<argument>
-											${project.build.directory}/dist/linux</argument>
-										<argument>--add-modules</argument>
-										<argument>${jpackage.addModules}</argument>
-										<argument>--linux-menu-group</argument>
-										<argument>${jpackage.category}</argument>
-										<argument>--linux-shortcut</argument>
-										<argument>--icon</argument>
-										<argument>${jpackage.icon}</argument>
-										<argument>--file-associations</argument>
-										<argument>${jpackage.fa1}</argument>
-										<argument>--file-associations</argument>
-										<argument>${jpackage.fa2}</argument>
-										<argument>--file-associations</argument>
-										<argument>${jpackage.fa3}</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
+
 </project>
